# french-cities

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE.md  README.fr.md  README.md  pyproject.toml
.github/workflows/: build_pages.yml  publish.yml  test.yml
docs/: Gemfile  README.fr.md  README.md  _config.yml  about.md  base.html  config.md  config.yml  external_doc.md  home.md  index.html  index.md  install.md  installation.md  project_cities_to_year.md  search_cities.md  search_departements.md  use_cases.md  usecase_1.py
docs/_i18/: en.yml  fr.yml
docs/_i18/en/: home.md
docs/_i18/fr/: home.md
docs/_i18n/: en.yml  fr.yml
docs/_i18n/en/: installation.md
docs/_i18n/fr/: installation.md
docs/_includes/: toc_heading_custom.html
docs/_sass/custom/: setup.scss
docs/use_cases/: index.md  usecase_1.md  usecase_1.py  usecase_1_notebook.html  usecase_2.md  usecase_2.py  usecase_2_notebook.html  usecase_3.md  usecase_3_notebook.html  usecase_4.md  usecase_4_notebook.html  usecase_test.py
french_cities/: __init__.py  city_finder.py  config.py  constants.py  departement_finder.py  pynsee_patch.py  ultramarine_pseudo_cog.py  utils.py  vintage.py
notebooks_docs/: usecase_1.ipynb  usecase_1.py  usecase_2.ipynb  usecase_2.py  usecase_3.ipynb  usecase_3.py  usecase_4.ipynb  usecase_4.py  usecase_5.py  usecase_6.py
tests/: conftest.py  test_city_finder.py  test_departement_finder.py  test_ultramarines.py  test_vintage.py
