[tool.poetry]
name = "french-cities"
version = "0.3.3"
description = "Toolbox on french cities: set vintage, find departments, find cities..."
authors = ["thomas.grandjean <thomas.grandjean@developpement-durable.gouv.fr>"]
license = "GPL-3.0-or-later"
readme = ["README.md", "README.fr.md"]
homepage = "https://github.com/tgrandje/french-cities/"
repository = "https://github.com/tgrandje/french-cities/"
documentation = "https://github.com/tgrandje/french-cities/"
keywords = ["france", "cities"]
packages = [{include = "french_cities"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/tgrandje/french-cities/issues"

[tool.poetry.dependencies]
python = "^3.9"
requests-cache = "^1.1.0"
unidecode = "^1.3.6"
python-dotenv = "^1.0.0"
pandas = "^2.2.2"
geopandas = "^0.14.4"
rapidfuzz = "^3.1.1"
pynsee = "^0.1.7"
pebble = "^5.0.3"
tqdm = "^4.65.0"
importlib-metadata = "^6.8.0"
geopy = "^2.3.0"

[tool.poetry.extras]
full = ["geopy"]

[tool.poetry.group.dev.dependencies]
spyder = "^5.4.3"
pytest = "^7.4.0"
licensecheck = "^2024.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

