[tool.poetry]
name = "french-cities"
version = "1.1.2"
description = "Toolbox on french cities: set vintage, find departments, find cities..."
authors = ["thomas.grandjean <thomas.grandjean@developpement-durable.gouv.fr>"]
license = "GPL-3.0-or-later"
readme = ["README.md"]
homepage = "https://github.com/tgrandje/french-cities/"
repository = "https://github.com/tgrandje/french-cities/"
documentation = "https://tgrandje.github.io/french-cities/"
keywords = ["france", "cities"]
packages = [{include = "french_cities"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/tgrandje/french-cities/issues"

[tool.poetry.dependencies]
python = "^3.9"
requests-cache = "^1.2.1"
unidecode = "^1.3.6"
python-dotenv = "^1.0.0"
pandas = "^2.2.2"
geopandas = "^1.0.1"
rapidfuzz = "^3.1.1"
pebble = "^5.0.3"
tqdm = "^4.65.0"
importlib-metadata = "^6.8.0"
geopy = "^2.3.0"
diskcache = "^5.6.3"
platformdirs = "^4.2.2"
setuptools = "^75.8.0"
pynsee = "^0.2.1"

[tool.poetry.group.dev.dependencies]
spyder = "^6.0.5"
pytest = "^7.4.0"
licensecheck = "^2024.2"
pyqt5-qt5 = "5.15.2"
pyqtwebengine-qt5 = "5.15.2"
lxml = "^5.2.2"
openpyxl = "^3.1.4"
spyder-notebook = "^0.6.1"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
vulture = "^2.14"
pytest-cov = "^6.0.0"
genbadge = {extras = ["all"], version = "^1.1.1"}
flake8 = "^7.1.1"
pre-commit = "^4.1.0"
black = "^25.1.0"
ipywidgets = "^8.1.5"


[tool.pytest.ini_options]
log_cli = true
log_cli_level = "WARNING"
log_format = "%(asctime)s - %(name)s - %(levelname)s - %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
addopts = "--cov-report xml:./reports/coverage/coverage.xml"

[tool.coverage.run]
omit = [
    "tests/*",
    ]

[tool.black]
include = '\.py$'
line-length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
